# transformer-Model-from-scratch-in-cpp

./: .gitignore  CMakeLists.txt  README.md  attention.cpp  attention.h  attention_rope_integration.cpp  main.cpp  matrix.cpp  matrix.h  positional_encoding.cpp  positional_encoding.h  quantization.cpp  quantization.h  simple_test.cpp  tensor.cpp  tensor.h  trainer.cpp  trainer.h  transformer.cpp  transformer.h
